k8s/before-migration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-svc
                port:
                  number: 80
          - path: /goodbye
            pathType: Prefix
            backend:
              service:
                name: hello-svc
                port:
                  number: 80
  tls:
    - hosts:
        - example.com
      secretName: hello-tls
